# python-blog

./: .gitignore  LICENSE  pyproject.toml
blog/: settings.py  urls.py
blog/static/css/: admin.css
news/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_auto_20201231_2035.py  0003_auto_20201231_2044.py  0004_auto_20201231_2159.py  0005_auto_20210101_2341.py  0006_auto_20210106_1952.py
news/templates/news/: add_news.html  category.html  home_news_list.html  list_categories.html  login.html  news_detail.html  news_list.html  register.html  test.html  view_news.html
news/templatetags/: news_tags.py
templates/: base.html
templates/inc/: _nav.html  _sidebar.html
testapp/: admin.py  models.py  urls.py  views.py
testapp/migrations/: 0001_initial.py  0002_article.py  0003_auto_20210218_2144.py
testapp/templates/testapp/: test.html
