[tool.poetry]
name = "python-blog"
version = "0.1.0"
description = "Blog"
authors = ["nsvistov <swistov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
Pillow = "^8.0.1"
ipython = "^7.19.0"
black = "^20.8b1"
sentry-sdk = "^0.19.5"
django-debug-toolbar = "^3.2"
django-environ = "^0.4.5"
django-ckeditor = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
